fix: nav buttons and icons spacing

--- a/pages/header.css
+++ b/pages/header.css
@@ -31,41 +31,44 @@ grid-template-columns: repeat(5, [col-start] 1fr);
     justify-content: center;
     align-items: center;
     grid-column: col-start 5/6;
+    margin-right: 0.5rem;
 }
 
 .header-login{
-    margin-left: auto;
-    grid-column: col-start 4/5;
     border: 1px solid white;
     color: white;
-    padding:  0 0.5rem ;
+    padding:  0.5rem ;
     height: 60%;
-    margin-top: auto;
-    margin-bottom: auto;
+   margin: auto;
+   margin-right: 2rem;
 }
 .badge-wrapper{
     margin: 0.5rem auto;
 }
-.header-wishlist{
+.header-icon{
   display: flex;
-    margin: 2% auto;
+    margin: 0.5rem;
+    margin-left: 0.75rem;
 }
-.header-cart{
-    display: flex;
-    margin: 2% auto;
-}
+
 .header-text-sm{
     width: 80%;
     margin: auto;
 }
-.badge-num{
+
+.badge-top-right{
+    display: inline-flex;
     background-color: var(--CTA);
-    padding: 0.15rem 0.25rem;
+    border-radius: 50%;
+    font-size: 0.8rem;
+    padding: 0.05rem 0.45rem;
+    margin-top: -2rem;
+    margin-left: -0.5rem;
 }
 .cta{ 
     color: var(--CTA);
 }
 
-.header-logo:hover,.header-wishlist:hover,.header-cart:hover{
+.header-logo:hover,.header-icon:hover{
     cursor: pointer;
 }
