--- a/pages/home.css
+++ b/pages/home.css
@@ -49,7 +49,7 @@ margin-bottom: 25rem;
     margin: 1rem auto;
     grid-gap: 1rem;
   grid-template-columns: repeat(2, [col-start] 1fr);
-
+margin-bottom: 3rem;
 }
 .home-card-landscape{
     width: 80%;
